Refactor quote homepage

--- a/apps/quoting/src/app/components/quote-calculator/quote-form/quote-form.component.html
+++ b/apps/quoting/src/app/components/quote-calculator/quote-form/quote-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="quoteFrm">
+<form [formGroup]="quoteFrm" class="quote-form">
   <!---->
   <div class="quote-selector">
     <p class="label">Desired Loan Amount</p>
@@ -57,7 +57,7 @@
       ></p-slider>
     </p>
     <div class="quote-range">
-      <div>$0</div>
+      <div>$100</div>
       <div>$15,000+</div>
     </div>
   </div>
