--- a/apps/quoting/src/app/routes/home/home.component.html
+++ b/apps/quoting/src/app/routes/home/home.component.html
@@ -1,1 +1,17 @@
-<h1>Quoting!</h1>
+<div class="bg"></div>
+<div class="container">
+  <p-card>
+    <div>
+      <h1>Explore Loan Choices with Our Customizable Calculator</h1>
+      <div style="max-width: 480px; margin: auto">
+        <app-quote-form></app-quote-form>
+      </div>
+      <!--
+      <app-quote-calculator
+        (quoteChanged)="quoteChanged($event)"
+        (productSelected)="productSelected($event)"
+      ></app-quote-calculator>
+      -->
+    </div>
+  </p-card>
+</div>
