--- a/apps/quoting/src/app/components/masterpage/masterpage.component.html
+++ b/apps/quoting/src/app/components/masterpage/masterpage.component.html
@@ -1,8 +1,6 @@
 <div class="container">
-  <div class="row">
-    <div class="col col-12 col-md-4">Sidebar</div>
-    <div class="col col-12 col-md-8">
-      <ng-content></ng-content>
-    </div>
-  </div>
+  <app-progress></app-progress>
+  <p-card>
+    <router-outlet></router-outlet>
+  </p-card>
 </div>
