--- a/libs/masterpage/src/lib/masterpage/header/header.component.scss
+++ b/libs/masterpage/src/lib/masterpage/header/header.component.scss
@@ -4,8 +4,8 @@
 
 header {
   background: #fff;
-  border-bottom: 1px solid #e2e5e8;
-  margin-bottom: 1rem;
+  // border-bottom: 1px solid #e2e5e8;
+  // margin-bottom: 1rem;
   padding-top: 20px;
   padding-bottom: 20px;
   .logo {
