--- a/apps/quoting/src/app/components/quote-calculator/quote-form/quote-form.component.html
+++ b/apps/quoting/src/app/components/quote-calculator/quote-form/quote-form.component.html
@@ -22,30 +22,12 @@
   </div>
   <!---->
   <div class="quote-selector">
-    <p class="label">Loan Duration</p>
-    <h2>{{ quoteFrm.value.loanDuration }} Months</h2>
-    <p>
-      <p-slider
-        formControlName="loanDuration"
-        [min]="36"
-        [max]="84"
-        [step]="12"
-      ></p-slider>
-    </p>
-    <div class="quote-range">
-      <div>36 Months</div>
-      <div>84 Months</div>
-    </div>
-  </div>
-  <!-- -->
-  <div class="quote-selector">
     <p class="label">Your Approximate Monthly Income</p>
     <h2>
       {{ quoteFrm.value.monthlyIncome | currency : 'USD' : 'symbol' : '1.0-0' }}
       @if(quoteFrm.value.monthlyIncome && quoteFrm.value.monthlyIncome >= 15000)
       {
       <span class="nudge-left">+ </span>
-
       }
     </h2>
     <p>
@@ -61,22 +43,52 @@
       <div>$15,000+</div>
     </div>
   </div>
-
   <!---->
   <div class="quote-selector">
-    <p class="label">Your Approximate Credit Score</p>
-    <h2>{{ quoteFrm.value.creditScore }}</h2>
+    <p class="label">Desired Loan Duration</p>
+    <h2>{{ quoteFrm.value.loanDuration }} Months</h2>
     <p>
       <p-slider
-        formControlName="creditScore"
-        [min]="550"
-        [max]="850"
-        [step]="10"
+        formControlName="loanDuration"
+        [min]="36"
+        [max]="84"
+        [step]="12"
       ></p-slider>
     </p>
     <div class="quote-range">
-      <div>550</div>
-      <div>850</div>
+      <div>36 Months</div>
+      <div>84 Months</div>
     </div>
+  </div>
+  <!-- -->
+
+  <!---->
+  <div class="quote-selector">
+    <p class="label">Desired Annual Percentage Rate (APR)</p>
+    <h2>{{ quoteFrm.value.apr }}%</h2>
+    <p>
+      <p-slider
+        formControlName="apr"
+        [min]="5"
+        [max]="30"
+        [step]="1"
+      ></p-slider>
+    </p>
+    <div class="quote-range">
+      <div>5%</div>
+      <div>30%</div>
+    </div>
+  </div>
+
+  <div class="quote-selector">
+    <p class="label mb-2">Do you wish to secure your loan with your vehicle?</p>
+    <p>
+      <p-selectButton
+        styleClass="w-100-mobile"
+        formControlName="collateral"
+        [options]="['Yes', 'No']"
+      ></p-selectButton>
+    </p>
+    <div class="quote-range"></div>
   </div>
 </form>
