--- a/apps/quoting/src/app/routes/v3/v3.component.html
+++ b/apps/quoting/src/app/routes/v3/v3.component.html
@@ -1,1 +1,102 @@
-<p>v3 works!</p>
+<div class="bg"></div>
+<div class="container">
+  <p-card>
+    <div>
+      <div style="max-width: 480px; margin: auto">
+        @if(page() === 1) {
+        <h1>Borrower Is Selecting Loan Preferences</h1>
+        } @if(page() === 2) {
+        <h1>Borrower Has Finalized Loan Preference Selection</h1>
+        } @if(page() === 1 || page() === 1) {
+        <table
+          class="table table-striped"
+          *ngIf="formDefaults$ | async as formDefaults"
+        >
+          <tbody>
+            <tr>
+              <td><strong>Loan Amount</strong></td>
+              <td>
+                {{
+                  formDefaults.loanAmount
+                    | currency : 'USD' : 'symbol' : '1.0-2'
+                }}
+              </td>
+            </tr>
+            <tr>
+              <td><strong>Your Approximate Monthly Income</strong></td>
+              <td>
+                {{
+                  formDefaults.monthlyIncome
+                    | currency : 'USD' : 'symbol' : '1.0-2'
+                }}
+              </td>
+            </tr>
+            <tr>
+              <td><strong>Desired Loan Duration</strong></td>
+              <td>{{ formDefaults.loanDuration }} Months</td>
+            </tr>
+            <tr>
+              <td><strong>Desired Annual Percentage Rate (APR)</strong></td>
+              <td>{{ formDefaults.apr }}%</td>
+            </tr>
+            <tr>
+              <td><strong>Car As Collateral</strong></td>
+              <td>{{ formDefaults.collateral }}</td>
+            </tr>
+          </tbody>
+        </table>
+        }
+        <!--
+        <app-quote-form
+          [formDefaults]="formDefaults$ | async"
+          (quoteFormChanged)="quoteFormChanged($event)"
+        ></app-quote-form>
+        -->
+      </div>
+    </div>
+    @if(page() === 2) {
+    <div style="max-width: 480px; margin: auto">
+      <p>
+        After you have created loan products for this customer, click the button
+        below to send them a link to the loan products page.
+      </p>
+      <p-button
+        label="Send Link to Borrower"
+        (click)="loanProductsReady()"
+      ></p-button>
+    </div>
+    } @if(page() === 3) {
+    <h1>Borrower Is Reviewing Loan Products</h1>
+    <p>Available Loan Products</p>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Secured</th>
+          <th>Monthly Payment</th>
+          <th>Term</th>
+          <th>Rate</th>
+          <th>APR</th>
+        </tr>
+      </thead>
+      <tbody>
+        @for(product of loanProducts; track product) {
+        <tr>
+          <td>@if(product.hasCollateral) { Yes } @else { No }</td>
+          <td>
+            {{
+              product.monthlyPaymentMin | currency : 'USD' : 'symbol' : '1.0-2'
+            }}-{{
+              product.monthlyPaymentMax | currency : 'USD' : 'symbol' : '1.0-2'
+            }}
+          </td>
+          <td>{{ product.loanDuration }} Months</td>
+          <td>{{ product.rate }}%</td>
+          <td>{{ product.apr }}%</td>
+        </tr>
+        }
+      </tbody>
+    </table>
+    <a class="linky" (click)="page.set(1)">&lt; Back</a>
+    }
+  </p-card>
+</div>
