Add loan products UI, upgrade form generator

--- a/apps/team-member/src/app/routes/home/home.component.html
+++ b/apps/team-member/src/app/routes/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<div class="container-fluid">
+  <!--
+  <div class="text-center py-5">
+
+    <h1>Waiting For Customer</h1>
+    <p-progressSpinner ariaLabel="loading"></p-progressSpinner>
+
+  </div>
+  -->
+  <app-loan-product-builder></app-loan-product-builder>
+</div>
