--- a/apps/team-member/src/app/team-member.component.html
+++ b/apps/team-member/src/app/team-member.component.html
@@ -1,6 +1,5 @@
 <div id="team-member">
-  <lib-masterpage>
-    Test
+  <lib-masterpage [fullWidth]="true">
     <router-outlet></router-outlet>
   </lib-masterpage>
 </div>
