--- a/libs/masterpage/src/lib/masterpage/header/header.component.html
+++ b/libs/masterpage/src/lib/masterpage/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="container">
+  <div [ngClass]="fullWidth ? 'container-fluid' : 'container'">
     <nav class="nav">
       <span class="brand">
         <a class="brand pl-2" [routerLink]="['/']"
