--- a/libs/quote-calculator/src/lib/loan-products/loan-products.component.html
+++ b/libs/quote-calculator/src/lib/loan-products/loan-products.component.html
@@ -1,9 +1,9 @@
 <div class="loan-products" *ngIf="products">
   @for(product of products;track product){
-  <app-loan-product
+  <lib-loan-product
     [product]="product"
     [showFullDetails]="showFullDetails"
     (productSelected)="productSelected.emit($event)"
-  ></app-loan-product>
+  ></lib-loan-product>
   }
 </div>
