--- a/libs/forms/src/lib/components/form-generator/row/row.component.scss
+++ b/libs/forms/src/lib/components/form-generator/row/row.component.scss
@@ -6,5 +6,8 @@
   margin-top: calc(-1 * var(--bs-gutter-y));
   margin-right: calc(-0.5 * var(--bs-gutter-x));
   margin-left: calc(-0.5 * var(--bs-gutter-x));
-  padding: 0.5rem;
+  padding: 0 0.5rem;
+  .form-generator-column {
+    padding-right: 0.5rem;
+  }
 }
