--- a/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.scss
+++ b/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.scss
@@ -45,7 +45,8 @@
 
   .loan-products-info {
     padding: 0.5rem;
-    background: #ededed;
+    background: linear-gradient(to right, #004b75, #00d0cd);
+    color: #fff;
     margin-bottom: 1rem;
 
     .info-inline {
