--- a/libs/brand/src/styles/styles.scss
+++ b/libs/brand/src/styles/styles.scss
@@ -5,3 +5,4 @@ body {
 // Global encapsulated styles
 @import 'global/typography.scss';
 @import 'global/layout.scss';
+@import 'global/buttons.scss';
